--- a/src/components/services/education.css
+++ b/src/components/services/education.css
@@ -1,31 +1,31 @@
-.experiance__container{
+.education__container{
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 2rem;
 }
-.experiance__container>div{
+.education__container>div{
     background: var(--color-bg-variant);
     padding: 2.4rem 5rem;
     border-radius: 2rem;
     border: 1px solid transparent;
     transition: var(--transition);
 }
-.experiance__container >div:hover{
+.education__container >div:hover{
     background: transparent;
     border-color: var(--color-primary-variant);
     cursor: default;
 }
-.experiance__content{
+.education__content{
     display: grid;
     grid-template-columns: 1fr 1fr;
     row-gap: 2rem;
 
 }
-.experiance__details{
+.education__details{
     display: flex;
     gap:1rem;
 }
-.experiance__details-icon{
+.education__details-icon{
     margin-top: 6px;
     color: var(--color-primary);
 }
@@ -33,23 +33,23 @@
 
 @media screen and (max-width:1024px){
 
-    .experiance__container{
+    .education__container{
         grid-template-columns: 1fr;
     }
-    .experiance__container>div{
+    .education__container>div{
         width: 80%;
         padding: 2rem;
         margin:0 auto;
     }
-    .experiance__content{
+    .education__content{
         padding: 1rem;
     }
 }
 @media screen and (max-width:600px){
- .experiance__container{
+ .education__container{
     gap: 1rem;
  }
- .experiance__container>div{
+ .education__container>div{
     width: 100%;
     padding: 2rem 1rem;
  }
