--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ body {
   --transition:all 400ms ease;
   --container-width-lg:75%;
   --container-width-md:86%;
-  --container-width-ms:90%;
+  --container-width-sm:90%;
 
 }
 html{
@@ -53,7 +53,7 @@ font-size: 2.5rem;
 }
 section{
   margin-top: 8rem;
-  height:100vh;
+  
 }
 section>h2, section>h5{
 text-align: center;
